cmake_minimum_required(VERSION 3.22)
project(PRG2_exercice C)

set(CMAKE_C_STANDARD 17)

add_executable(PRG2_exercice main.c)

add_executable(1.1 1/1.1.c)
add_executable(1.5 1/1.5.c)
add_executable(1.6 1/1.6.c)
add_executable(1.7 1/1.7.c)
add_executable(1.8 1/1.8.c)
add_executable(1.10 1/1.10.c)
add_executable(1.11 1/1.11.c)
add_executable(1.12 1/1.12.c)
add_executable(1.13 1/1.13.c)
add_executable(Training 1/Training.c)

add_executable(2.1 2/2.1.c)
add_executable(2.2 2/2.2.c)
add_executable(2.3 2/2.3.c)
add_executable(2.12 2/2.12.c)
add_executable(2.15 2/2.15.c)
add_executable(2.16 2/2.16.c)
add_executable(2.18 2/2.18.c)
add_executable(2.19 2/2.19.c)
add_executable(2.20 2/2.20.c)
add_executable(2.21 2/2.21.c)
add_executable(2.22 2/2.22.c)
add_executable(2.23 2/2.23.c)
add_executable(3.1 3/3.1.c)
add_executable(3.2 3/3.2.c)
add_executable(3.3 3/3.3.c)
add_executable(3.4 3/3.4.c)
add_executable(3.6 3/3.6.c)
